# rustd

./: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml
.next/: trace
.next/cache/: .rscinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc+helpers@0.5.15.js  next@15.1.4_react-dom@19.0.0_react@19.0.0__react@19.0.0.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/_not-found/: page.js
.next/static/webpack/: webpack.07004ce3a3e17669.hot-update.js
api/: Cargo.toml
api/src/: store.rs
app/: package-lock.json  package.json  pnpm-lock.yaml
app/app/: dei.tsx  layout.tsx  line_chart.tsx  model.tsx  page.tsx  pie_chart.tsx
crawler/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
src/: main.rs
